--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!--webpage title and stylesheets-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Horiseon | Social Solution Services</title>
 </head>
-
+<!-- navbar  -->
 <body>
-    <nav class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,26 +22,27 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </nav>
-
+        </nav>
+    </header>
+    <!-- banner image -->
     <div class="hero" title="people working image"></div>
+    <!-- main section with search engine optimization, online reputation management and social media marketing blocks -->
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="section-style">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Seo notebook" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="section-style">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop with reputation graph" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="section-style">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media icons on a table"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -49,23 +50,23 @@
             </p>
         </article>
     </section>
-
+<!-- right aside section with icons and sub-info  -->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand awareness icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cost management icon"></img>
             <p>
@@ -73,7 +74,7 @@
             </p>
         </section>
     </aside>
-
+<!-- footer section  -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
